# Raytracer

./: CMakeLists.txt  README.md  generate_new_picture.sh  generate_picture.sh  main.cpp  ray_tracing_config.h  test_img.ppm
headers/: camera.hpp  math_lib.hpp  plane.hpp  point_light.hpp  scene.hpp  sphere.hpp  surface.hpp  util.hpp
src/: camera.cpp  plane.cpp  point_light.cpp  scene.cpp  sphere.cpp  surface.cpp  test.cpp
